[package]
name = "bevy_toast"
description = "A bevy plugin to easily show toast notifications to the player"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Corrosive-Games/bevy_toast"
license = "MIT"
keywords = ["bevy", "toast", "notification"]
categories = ["game-development"]
exclude = [".readme_assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["png"] }
bevy_tweening = "0.8"

#[dev-dependencies]
#bevy-inspector-egui = "0.18.1"
